// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SummarySection /> should adopt all types 1`] = `
<section
  class="czlPHw"
>
  <div
    class="lhxzqr"
  >
    <h2
      class="iaXvoQ"
      color="green"
    >
      2 answered correctly
    </h2>
  </div>
  <div
    class="lhxzqr"
  >
    <div>
      <div
        class="czlPHw"
      >
        <div
          class="iZQoTn"
        >
          <h3
            class="dKOlPI"
          >
            <span
              class="ufRFl"
            >
              <strong
                class="lgSyAV"
              >
                2
              </strong>
              Guru
            </span>
          </h3>
        </div>
        <div>
          <div
            class="__react_component_tooltip place-top type-dark "
            data-id="tooltip"
          />
          <ul
            class="fAaWEY"
          >
            <li
              class="khpCuN"
              data-for="vocabChipTip"
              data-place="bottom"
              data-tip="
              <ul>
                <li>
                  <span>EN</span>
                  <span>Before Long</span>
                <li>
                  <span>JA </span>
                  <span lang=\\"ja\\">ちかぢか</span>
                </li>
                <li>
                  <span>RC</span>
                  <span>64%</span>
                </li>
              </ul>
            "
            >
              <a
                class="gCqXBY kMmZKU"
              >
                <span
                  class="JkMnC"
                  lang="ja"
                >
                  近々
                </span>
              </a>
            </li>
            <li
              class="khpCuN"
              data-for="vocabChipTip"
              data-place="bottom"
              data-tip="
              <ul>
                <li>
                  <span>EN</span>
                  <span>Young Lady</span>
                <li>
                  <span>JA </span>
                  <span lang=\\"ja\\">しょうじょ</span>
                </li>
                <li>
                  <span>RC</span>
                  <span>64%</span>
                </li>
              </ul>
            "
            >
              <a
                class="gCqXBY kMmZKU"
              >
                <span
                  class="JkMnC"
                  lang="ja"
                >
                  少女
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`<SummarySection /> should adopt all types 2`] = `
<section
  class="czlPHw"
>
  <div
    class="lhxzqr"
  >
    <h2
      class="knoJpK"
      color="red"
    >
      2 answered incorrectly
    </h2>
  </div>
  <div
    class="lhxzqr"
  >
    <div>
      <div
        class="czlPHw"
      >
        <div
          class="iZQoTn"
        >
          <h3
            class="dKOlPI"
          >
            <span
              class="ufRFl"
            >
              <strong
                class="lgSyAV"
              >
                2
              </strong>
              Guru
            </span>
          </h3>
        </div>
        <div>
          <div
            class="__react_component_tooltip place-top type-dark "
            data-id="tooltip"
          />
          <ul
            class="fAaWEY"
          >
            <li
              class="llosvn"
              data-for="vocabChipTip"
              data-place="bottom"
              data-tip="
              <ul>
                <li>
                  <span>EN</span>
                  <span>Before Long</span>
                <li>
                  <span>JA </span>
                  <span lang=\\"ja\\">ちかぢか</span>
                </li>
                <li>
                  <span>RC</span>
                  <span>64%</span>
                </li>
              </ul>
            "
            >
              <a
                class="gCqXBY kMmZKU"
              >
                <span
                  class="lbhIEP"
                  lang="ja"
                >
                  近々
                </span>
              </a>
            </li>
            <li
              class="llosvn"
              data-for="vocabChipTip"
              data-place="bottom"
              data-tip="
              <ul>
                <li>
                  <span>EN</span>
                  <span>Young Lady</span>
                <li>
                  <span>JA </span>
                  <span lang=\\"ja\\">しょうじょ</span>
                </li>
                <li>
                  <span>RC</span>
                  <span>64%</span>
                </li>
              </ul>
            "
            >
              <a
                class="gCqXBY kMmZKU"
              >
                <span
                  class="lbhIEP"
                  lang="ja"
                >
                  少女
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`<SummarySection /> should adopt all types 3`] = `
<section
  class="czlPHw"
>
  <div
    class="lhxzqr"
  >
    <h2
      class="isTFjL"
      color="orange"
    >
      2 critical items
    </h2>
  </div>
  <div
    class="lhxzqr"
  >
    <div>
      <div
        class="__react_component_tooltip place-top type-dark "
        data-id="tooltip"
      />
      <ul
        class="fAaWEY"
      >
        <li
          class="ieYcML"
          data-for="vocabChipTip"
          data-place="bottom"
          data-tip="
          <ul>
            <li>
              <span>EN</span>
              <span>Before Long</span>
            <li>
              <span>JA </span>
              <span lang=\\"ja\\">ちかぢか</span>
            </li>
            <li>
              <span>RC</span>
              <span>64%</span>
            </li>
          </ul>
        "
        >
          <a
            class="gCqXBY kMmZKU"
          >
            <span
              class="fcsNlw"
              lang="ja"
            >
              近々
            </span>
          </a>
        </li>
        <li
          class="ieYcML"
          data-for="vocabChipTip"
          data-place="bottom"
          data-tip="
          <ul>
            <li>
              <span>EN</span>
              <span>Young Lady</span>
            <li>
              <span>JA </span>
              <span lang=\\"ja\\">しょうじょ</span>
            </li>
            <li>
              <span>RC</span>
              <span>64%</span>
            </li>
          </ul>
        "
        >
          <a
            class="gCqXBY kMmZKU"
          >
            <span
              class="fcsNlw"
              lang="ja"
            >
              少女
            </span>
          </a>
        </li>
      </ul>
    </div>
  </div>
</section>
`;

exports[`<SummarySection /> should adopt expanded prop 1`] = `
<section
  class="czlPHw"
>
  <div
    class="lhxzqr"
  >
    <h2
      class="iaXvoQ"
      color="green"
    >
      2 answered correctly
    </h2>
  </div>
  <div
    class="lhxzqr"
  >
    <div>
      <div
        class="czlPHw"
      >
        <div
          class="iZQoTn"
        >
          <h3
            class="dKOlPI"
          >
            <span
              class="ufRFl"
            >
              <strong
                class="lgSyAV"
              >
                2
              </strong>
              Guru
            </span>
          </h3>
        </div>
        <ul
          class="bKvhlU"
        >
          <li
            class="jUcQtZ"
          >
            <a
              class="iCoZdI kMmZKU"
            >
              <dl
                class="iQUovP"
                color="green"
              >
                <div
                  class="reading"
                >
                  <dt
                    class="kana"
                    lang="ja"
                  >
                    ちかぢか, きんきん, ちかじか
                  </dt>
                  <dt
                    class="character"
                    lang="ja"
                  >
                    近々
                  </dt>
                  <div
                    class="separator"
                  />
                </div>
                <dd
                  class="meaning"
                >
                  before long, soon
                </dd>
              </dl>
            </a>
          </li>
          <li
            class="jUcQtZ"
          >
            <a
              class="iCoZdI kMmZKU"
            >
              <dl
                class="iQUovP"
                color="green"
              >
                <div
                  class="reading"
                >
                  <dt
                    class="kana"
                    lang="ja"
                  >
                    しょうじょ, おとめ
                  </dt>
                  <dt
                    class="character"
                    lang="ja"
                  >
                    少女
                  </dt>
                  <div
                    class="separator"
                  />
                </div>
                <dd
                  class="meaning"
                >
                  young lady, little girl, maiden, daughter, girl
                </dd>
              </dl>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</section>
`;
